artist dropdown list

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,7 @@
 	background-color: var(--white);
 }
 
-.h1-reset,
-.h2-reset,
-.h3-reset,
-.p-reset {
+.text-block-reset {
 	margin: 0;
 }
 
@@ -39,23 +36,13 @@
 	list-style: none;
 }
 
-.a-reset {
+.link-reset {
 	text-decoration: none;
 	color: inherit;
 	outline: none;
 }
 
-.a-reset:hover {
-	cursor: default;
-}
-
-.input-reset,
-.button-reset {
-	outline: none;
-}
-
-.img-reset,
-.picture-reset {
+.img-reset {
 	max-width: 100%;
 	height: auto;
 }
@@ -147,7 +134,8 @@
 	width: 13px;
 }
 
-.mobile-nav.closed {
+.mobile-nav.closed,
+.artist-dropdown.closed {
 	display: none;
 }
 
@@ -226,8 +214,7 @@
 }
 
 @media(min-width: 1650px) {
-	button:hover,
-	a:hover {
+	.link-reset {
 		cursor: pointer;
 	}
 
@@ -364,12 +351,70 @@
 	}
 
 	.styles-list__link:active::after {
-		transform: rotate(-135deg);
 		border-color: var(--dark-purple);
 	}
 
 	.styles-list__link:active {
 		color: var(--dark-purple);
+	}
+
+	.artist-dropdown {
+		position: absolute;
+		width: 300px;
+		height: 300px;
+		padding: 40px;
+		background-color: rgba(0, 0, 0, 0.4);
+	}
+
+	.artist-dropdown__list {
+		width: 220px;
+		height: 220px;
+	}
+
+	.artist-dropdown__item {
+		width: 220px;
+		height: 40px;
+		padding: 9px 14px 12px;
+		font-size: 14px;
+		font-weight: 600;
+		transition-property: box-shadow;
+		transition-duration: 0.3s;
+	}
+
+	.artist-dropdown__item:hover {
+		box-shadow: 0 0 0 2px var(--purple) inset;
+	}
+
+	.artist-dropdown__item:active {
+		background-color: rgba(194, 131, 243, 0.4);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:not(:last-child) {
+		margin-bottom: 20px;
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(1) {
+		background-image: url(../img/paintings-dropdown/realism/manet.jpg);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(2) {
+		background-image: url(../img/paintings-dropdown/realism/degas.jpg);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(3) {
+		background-image: url(../img/paintings-dropdown/realism/repin.jpg);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(4) {
+		background-image: url(../img/paintings-dropdown/realism/brullov.jpg);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(5) {
+		background-image: url(../img/paintings-dropdown/realism/perov.jpg);
+	}
+
+	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(6) {
+		background-image: url(../img/paintings-dropdown/realism/courbet.jpg);
 	}
 
 	.search-form {
