--- a/css/styles.css
+++ b/css/styles.css
@@ -134,9 +134,12 @@
 	width: 13px;
 }
 
-.mobile-nav.closed,
-.artist-dropdown.closed {
+.closed {
 	display: none;
+}
+
+.hidden {
+	opacity: 0;
 }
 
 .mobile-menu-list {
@@ -362,16 +365,31 @@
 		position: absolute;
 		width: 300px;
 		height: 300px;
-		padding: 40px;
+		padding: 40px 20px 40px 40px;
 		background-color: rgba(0, 0, 0, 0.4);
+		transition-duration: 0.3s;
 	}
 
 	.artist-dropdown__list {
-		width: 220px;
+		width: 240px;
 		height: 220px;
+		overflow-y: scroll;
+	}
+
+	.artist-dropdown__list::-webkit-scrollbar {
+		width: 2px;
+	}
+
+	.artist-dropdown__list::-webkit-scrollbar-track {
+		background-color: #000;
+	}
+
+	.artist-dropdown__list::-webkit-scrollbar-thumb {
+		background-color: var(--purple);
 	}
 
 	.artist-dropdown__item {
+		position: relative;
 		width: 220px;
 		height: 40px;
 		padding: 9px 14px 12px;
@@ -385,11 +403,17 @@
 		box-shadow: 0 0 0 2px var(--purple) inset;
 	}
 
-	.artist-dropdown__item:active {
+	.artist-dropdown__item:active::before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
 		background-color: rgba(194, 131, 243, 0.4);
 	}
 
-	.styles-list__item:nth-child(1) .artist-dropdown__item:not(:last-child) {
+	.artist-dropdown__item:not(:last-child) {
 		margin-bottom: 20px;
 	}
 
@@ -415,6 +439,23 @@
 
 	.styles-list__item:nth-child(1) .artist-dropdown__item:nth-child(6) {
 		background-image: url(../img/paintings-dropdown/realism/courbet.jpg);
+	}
+
+
+	.styles-list__item:nth-child(2) .artist-dropdown__item:nth-child(1) {
+		background-image: url(../img/paintings-dropdown/impressionism/monet.jpg);
+	}
+
+	.styles-list__item:nth-child(2) .artist-dropdown__item:nth-child(2) {
+		background-image: url(../img/paintings-dropdown/impressionism/moriso.jpg);
+	}
+
+	.styles-list__item:nth-child(2) .artist-dropdown__item:nth-child(3) {
+		background-image: url(../img/paintings-dropdown/impressionism/pissarro.jpg);
+	}
+
+	.styles-list__item:nth-child(2) .artist-dropdown__item:nth-child(4) {
+		background-image: url(../img/paintings-dropdown/impressionism/renoir.jpg);
 	}
 
 	.search-form {
