--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,44 @@
 	display: none;
 }
 
+/* info */
+
+.info {
+	min-height: 320px;
+	padding-top: 30px;
+	padding-bottom: 45px;
+	text-align: center;
+	background-image: url('../img/info-bg/mobile-1.jpg');
+	background-size: cover;
+	color: var(--white);
+}
+
+.tagline {
+	margin-bottom: 16px;
+}
+
+.subtext {
+	max-width: 265px;
+	margin-bottom: 40px;
+	line-height: 1.3;
+	font-size: 12px;
+}
+
+.subscribe-btn {
+	min-width: 200px;
+	padding: 14px;
+	border: none;
+	border-radius: 20px;
+	background-color: var(--purple);
+	font-size: 12px;
+	font-weight: 700;
+}
+
+.subscribe-btn:active {
+	box-shadow: 0 0 0 2px var(--light-purple) inset;
+	background-color: var(--dark-purple);
+}
+
 @media(min-width: 768px) {
 	.container {
 		padding: 0 50px;
@@ -214,6 +252,42 @@
 		padding: 15px 0;
 		font-size: 18px;
 	}
+
+	/* info */
+
+	.info {
+		min-height: 668px;
+		padding-top: 105px;
+		padding-bottom: 115px;
+		text-align: left;
+		background-image: url('../img/info-bg/tablet-1.jpg');
+	}
+
+	.tagline {
+		margin-bottom: 0;
+		font-size: 72px;
+	}
+
+	.subtext {
+		max-width: 660px;
+		margin-bottom: 120px;
+		line-height: 2;
+		font-size: 18px;
+		font-weight: 700;
+	}
+
+	.subscribe-btn {
+		min-width: 315px;
+		padding: 26px;
+		border: none;
+		border-radius: 35px;
+		font-size: 18px;
+	}
+
+	.subscribe-btn:active {
+		box-shadow: 0 0 0 3px var(--light-purple) inset;
+		background-color: var(--dark-purple);
+	}
 }
 
 @media(min-width: 1024px) {
@@ -236,6 +310,7 @@
 	.header {
 		font-size: 18px;
 		color: var(--white);
+		z-index: 10;
 	}
 
 	.header .container {
@@ -249,7 +324,7 @@
 	.lower-header {
 		display: block;
 		padding: 16px 0;
-		background: rgba(0, 0, 0, 0.4);
+		background-color: rgba(0, 0, 0, 0.4);
 	}
 
 	.search,
@@ -525,5 +600,37 @@
 
 	.search-form:focus-within {
 		box-shadow: 0 0 0 2px var(--dark-purple);
+	}
+
+	/* info */
+
+	.info {
+		min-height: 700px;
+		margin-top: -70px;
+		padding-top: 133px;
+		padding-bottom: 122px;
+		background-image: url('../img/info-bg/desktop-1.jpg');
+		z-index: 0;
+	}
+
+	.tagline {
+		max-width: 600px;
+	}
+
+	.subtext {
+		max-width: 580px;
+		margin-bottom: 92px;
+	}
+
+	.subscribe-btn:hover {
+		box-shadow: 0 0 0 3px var(--light-purple) inset;
+	}
+
+	.subscribe-btn:focus {
+		box-shadow: 0 0 0 3px var(--dark-purple) inset;
+	}
+
+	.subscribe-btn:focus:not(.focus-visible) {
+		box-shadow: none;
 	}
 }
