--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
 }
 
 .selectable {
-	transition-property: box-shadow, color;
+	transition-property: box-shadow, color, background-image;
 	transition-duration: 0.3s;
 }
 
@@ -146,42 +146,67 @@
 	opacity: 0;
 }
 
-.mobile-menu-list {
+.menu-list {
 	width: 100%;
+	padding: 0 15px;
 }
 
-.mobile-menu-list__item {
+.menu-list__item {
 	padding: 10px 0;
 }
 
-.mobile-menu-list__item:not(:last-child) {
+.menu-list__item:not(:last-child) {
 	border-bottom: 1px solid var(--purple);
 }
 
 .header-nav {
+	display: none;
+	position: absolute;
+	top: 45px;
+	left: 0;
+	width: 100%;
+	background-color: var(--white);
+}
+
+.login {
 	display: none;
 }
 
 /* info */
 
 .info {
-	min-height: 320px;
-	padding-top: 30px;
-	padding-bottom: 45px;
+	min-height: 310px;
 	text-align: center;
-	background-image: url('../img/info-bg/mobile-1.jpg');
-	background-size: cover;
 	color: var(--white);
 }
 
+.swiper-slide {
+	padding-top: 35px;
+	padding-bottom: 45px;
+	background-size: cover;
+}
+
+.swiper-slide_1 {
+	background-image: url('../img/info-bg/mobile-1.jpg');
+}
+
+.swiper-slide_2 {
+	background-image: url('../img/info-bg/mobile-2.jpg');
+}
+
+.swiper-slide_3 {
+	background-image: url('../img/info-bg/mobile-3.jpg');
+}
+
 .tagline {
-	margin-bottom: 16px;
+	margin-bottom: 13px;
+	font-size: 32px;
 }
 
 .subtext {
 	max-width: 265px;
-	margin-bottom: 40px;
-	line-height: 1.3;
+	margin: 0 auto 40px auto;
+	line-height: 1.4;
 	font-size: 12px;
 }
 
@@ -248,36 +273,60 @@
 		width: 24px;
 	}
 
-	.mobile-menu-list__item {
+	.menu-list {
+		padding: 0 50px;
+	}
+
+	.menu-list__item {
 		padding: 15px 0;
 		font-size: 18px;
+	}
+
+	.header-nav {
+		top: 100px;
 	}
 
 	/* info */
 
 	.info {
 		min-height: 668px;
-		padding-top: 105px;
-		padding-bottom: 115px;
 		text-align: left;
+	}
+
+	.swiper-slide {
+		padding-top: 112px;
+		padding-bottom: 115px;
+	}
+
+	.swiper-slide_1 {
 		background-image: url('../img/info-bg/tablet-1.jpg');
 	}
 
+	.swiper-slide_2 {
+		background-image: url('../img/info-bg/tablet-2.jpg');
+	}
+
+	.swiper-slide_3 {
+		background-image: url('../img/info-bg/tablet-3.jpg');
+	}
+
 	.tagline {
-		margin-bottom: 0;
+		margin-left: 45px;
+		margin-bottom: 13px;
 		font-size: 72px;
 	}
 
 	.subtext {
 		max-width: 660px;
-		margin-bottom: 120px;
-		line-height: 2;
+		margin: 0 50px 133px 50px;
+		line-height: 1.7em;
 		font-size: 18px;
 		font-weight: 700;
 	}
 
 	.subscribe-btn {
 		min-width: 315px;
+		margin-left: 50px;
 		padding: 26px;
 		border: none;
 		border-radius: 35px;
@@ -308,6 +357,7 @@
 	/* header */
 
 	.header {
+		position: relative;
 		font-size: 18px;
 		color: var(--white);
 		z-index: 10;
@@ -323,6 +373,8 @@
 
 	.lower-header {
 		display: block;
+		position: absolute;
+		width: 100%;
 		padding: 16px 0;
 		background-color: rgba(0, 0, 0, 0.4);
 	}
@@ -338,17 +390,16 @@
 	}
 
 	.header-nav {
+		position: static;
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-	}
-
-	.mobile-nav {
-		display: none;
+		background-color: transparent;
 	}
 
 	.login {
+		display: block;
 		padding-left: 20px;
 		margin-right: -7px;
 		border: none;
@@ -373,15 +424,20 @@
 	.menu-list,
 	.styles-list {
 		display: flex;
-		justify-content: space-between;
+	}
+
+	.menu-list {
+		padding: 0;
 	}
 
 	.menu-list__item {
 		font-weight: 600;
+		padding: 0;
 	}
 
 	.menu-list__item:not(:last-child) {
 		margin-right: 54px;
+		border-bottom: none;
 	}
 
 	.menu-list__link {
@@ -442,10 +498,11 @@
 
 	.artist-dropdown {
 		position: absolute;
+		top: 45px;
 		width: 300px;
 		height: 300px;
 		padding: 40px 20px 40px 40px;
-		background-color: rgba(0, 0, 0, 0.4);
+		background-color: #444c;
 		transition-duration: 0.3s;
 	}
 
@@ -471,7 +528,7 @@
 		position: relative;
 		width: 220px;
 		height: 40px;
-		padding: 9px 14px 12px;
+		padding: 11px 14px 10px;
 		font-size: 14px;
 		font-weight: 600;
 		transition-property: box-shadow;
@@ -541,6 +598,8 @@
 		display: flex;
 		margin-right: -6px;
 		padding: 6px;
+		transition-property: box-shadow;
+		transition-duration: 0.3s;
 	}
 
 	.search-form__btn {
@@ -553,6 +612,8 @@
 		background-image: url('../img/search.svg');
 		background-size: contain;
 		background-position: bottom;
+		transition-property: background-image;
+		transition-duration: 0.3s;
 	}
 
 	.search-form__input {
@@ -564,6 +625,8 @@
 		border-bottom: 1px solid var(--white);
 		background-color: transparent;
 		caret-color: var(--light-purple);
+		transition-property: border;
+		transition-duration: 0.3s;
 	}
 
 	.search-form__input::-ms-clear {
@@ -606,20 +669,45 @@
 
 	.info {
 		min-height: 700px;
-		margin-top: -70px;
-		padding-top: 133px;
-		padding-bottom: 122px;
-		background-image: url('../img/info-bg/desktop-1.jpg');
 		z-index: 0;
 	}
 
+	.swiper-slide {
+		padding-top: 141px;
+		padding-bottom: 120px;
+	}
+
+	.swiper-slide_1 {
+		background-image: url('../img/info-bg/desktop-1.jpg');
+	}
+
+	.swiper-slide_2 {
+		background-image: url('../img/info-bg/desktop-2.jpg');
+	}
+
+	.swiper-slide_3 {
+		background-image: url('../img/info-bg/desktop-3.jpg');
+	}
+
+	.swiper-slide__container {
+		width: 1600px;
+		margin: 0 auto;
+	}
+
 	.tagline {
+		margin-left: -5px;
 		max-width: 600px;
+		margin-bottom: 21px;
 	}
 
 	.subtext {
+		margin-left: 0;
 		max-width: 580px;
 		margin-bottom: 92px;
+	}
+
+	.subscribe-btn {
+		margin-left: 0;
 	}
 
 	.subscribe-btn:hover {
