--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1,15 +1,15 @@
 .catalog {
-	padding-top: 80px;
+	padding-top: 83px;
 }
 
 .catalog__heading {
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .flags {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 14px;
+	margin-bottom: 13px;
 }
 
 .flags__item {
@@ -72,8 +72,68 @@
 }
 
 .artists-catalog__heading {
-	border: none;
+	color: var(--dark-grey);
+	font-size: 18px;
+}
+
+.artists-catalog__subsection {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 21px 0 22px;
 	border-bottom: 1px solid #cacaca;
-	border-radius: 0;
-	background-color: transparent;
+	outline: none;
+}
+
+.artists-catalog__btn {
+	position: relative;
+	width: 30px;
+	height: 30px;
+	margin: 0;
+	border: none;
+	border-radius: 50%;
+	background-color: #ececec;
+}
+
+.artists-catalog__btn::after {
+	position: absolute;
+	content: '';
+	top: 11px;
+	right: 11px;
+	width: 7px;
+	height: 7px;
+	border-left: 1px solid var(--black);
+	border-bottom: 1px solid var(--black);
+	transform: rotate(-45deg);
+	transition-duration: 0.3s;
+}
+
+.artists-catalog__subsection.ui-state-active .artists-catalog__btn::after {
+	top: 13px;
+	transform: rotate(135deg);
+}
+
+.artists-catalog__list {
+	margin-top: -1px;
+	padding: 24px 0 27px;
+	border-top: 1px solid var(--purple);
+	border-bottom: 1px solid var(--purple);
+}
+
+.artists-catalog__item:not(:last-child) {
+	margin-bottom: 14px;
+}
+
+.artists-catalog__link {
+	margin-left: -4px;
+	padding: 0 4px;
+}
+
+.artists-catalog__link:hover {
+	color: var(--purple);
+	text-decoration: underline;
+}
+
+.artists-catalog__link:active {
+	color: var(--dark-purple);
 }
